[Mega nav] Fixed issues with multiple nav buttons not aligning correctly.

--- a/resources/css/sass/components/global/_components.theme.global.mega-nav.scss
+++ b/resources/css/sass/components/global/_components.theme.global.mega-nav.scss
@@ -39,6 +39,7 @@
 
 .c-mega-nav {
 	position: relative;
+	display: inline-block;
 }
 
 
